# hubstaff-reports

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yaml  pyproject.toml
app/: api.py  main.py
app/core/: config.py  email.py  scheduler.py  settings.py
app/hubstaff/: client.py  models.py
app/reports/: __init__.py  daily_activity.py  jobs.py
